--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+
+  <script src="/node_modules/flowbite/dist/flowbite.min.js"></script>
 </body>
 
 </html>
